--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,10 @@
     "start": "ts-node src/index.ts",
     "build": "tsc",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "jest --verbose",
+    "test:watch": "jest --watch",
+    "test:e2e": "jest --testPathPatterns=e2e --runInBand"
   },
   "dependencies": {
     "axios": "^1.7.0",
@@ -23,12 +26,17 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.10.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
     "eslint": "^9.39.2",
+    "jest": "^30.2.0",
     "nodemon": "^3.0.2",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.2"
   }
