chore: add pre-commit hooks with linting and testing
- Install Husky for git hooks management
- Install lint-staged for running linters on staged files
- Configure pre-commit hook to run:
  - Lint-staged: lints only staged files
  - E2E tests: ensures all calculations pass before commit
- Add test scripts to root package.json
- Update lint-staged configuration for client and server

This ensures code quality and test coverage on every commit

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "start": "yarn workspace server start",
     "lint": "yarn workspace client lint && yarn workspace server lint",
     "lint:fix": "yarn workspace client lint --fix && yarn workspace server lint:fix",
+    "test": "yarn workspace server test",
+    "test:e2e": "yarn workspace server test:e2e",
     "prepare": "husky"
   },
   "lint-staged": {
