--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,11 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^20.10.0",
     "axios": "^1.7.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -21,15 +26,11 @@
     "express": "^4.18.2",
     "mongoose": "^9.0.2",
     "morgan": "^1.10.1",
+    "typescript": "^5.3.2",
     "winston": "^3.19.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
-    "@types/morgan": "^1.9.10",
-    "@types/node": "^20.10.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
@@ -38,7 +39,6 @@
     "nodemon": "^3.0.2",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.6",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.2"
+    "ts-node": "^10.9.2"
   }
 }
