--- a/server/render.yaml
+++ b/server/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: expense-tracker-api
     runtime: node
-    buildCommand: yarn install && yarn build
+    buildCommand: yarn --frozen-lockfile install; yarn build
     startCommand: yarn start
     envVars:
       - key: NODE_ENV
