--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.294.0",
     "react": "^18.3.1",
