--- a/server/render.yaml
+++ b/server/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: expense-tracker-api
+    name: moneylens-api
     runtime: node
     buildCommand: yarn --frozen-lockfile install; yarn build
     startCommand: yarn start
