--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "server"
   ],
   "scripts": {
-    "dev": "concurrently \"yarn workspace server dev\" \"yarn workspace client dev\"",
-    "dev:server": "yarn workspace server dev",
-    "dev:client": "yarn workspace client dev",
-    "build": "yarn workspace client build",
-    "start": "yarn workspace server start",
-    "lint": "yarn workspace client lint && yarn workspace server lint",
-    "lint:fix": "yarn workspace client lint --fix && yarn workspace server lint:fix",
-    "test": "yarn workspace server test",
-    "test:e2e": "yarn workspace server test:e2e",
+    "dev": "concurrently \"yarn workspace moneylens-ai-api dev\" \"yarn workspace moneylens-ai-client dev\"",
+    "dev:server": "yarn workspace moneylens-ai-api dev",
+    "dev:client": "yarn workspace moneylens-ai-client dev",
+    "build": "yarn workspace moneylens-ai-client build",
+    "start": "yarn workspace moneylens-ai-api start",
+    "lint": "yarn workspace moneylens-ai-client lint && yarn workspace moneylens-ai-api lint",
+    "lint:fix": "yarn workspace moneylens-ai-client lint --fix && yarn workspace moneylens-ai-api lint:fix",
+    "test": "yarn workspace moneylens-ai-api test",
+    "test:e2e": "yarn workspace moneylens-ai-api test:e2e",
     "prepare": "husky"
   },
   "lint-staged": {
     "client/**/*.{ts,tsx}": [
-      "yarn workspace client lint --fix"
+      "yarn workspace moneylens-ai-client lint --fix"
     ],
     "server/**/*.ts": [
-      "yarn workspace server lint:fix"
+      "yarn workspace moneylens-ai-api lint:fix"
     ]
   },
   "devDependencies": {
